force-app/main/default/objects/Milestone__c/fields/I_RS_Assignee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Assignee__c</fullName>
    <label>Assignee</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Researcher</fullName>
                <default>true</default>
                <label>Researcher</label>
            </value>
            <value>
                <fullName>Research Office Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>