force-app/main/default/objects/Milestone__c/fields/I_RS_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Description__c</fullName>
    <description>Details of Milestone. Is copied to Task Description in Milestone-&gt;Task creation</description>
    <label>Pre-Conditions and Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>