force-app/main/default/objects/Milestone__c/fields/I_RS_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>