force-app/main/default/objects/Milestone__c/fields/I_RS_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Other_Description__c</fullName>
    <label>Milestone Type Other - Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>