force-app/main/default/objects/Milestone__c/fields/I_RS_Pre_Conditions_Instructions_TxtArea__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Pre_Conditions_Instructions_TxtArea__c</fullName>
    <label>Pre-Conditions and Instructions</label>
    <type>TextArea</type>
</CustomField>