force-app/main/default/objects/Milestone__c/fields/I_RS_Research_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Opportunity</label>
    <referenceTo>Research_Opportunity__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>