force-app/main/default/objects/Milestone__c/recordTypes/I_RS_RES_RO.recordType-meta.xml
<RecordType>
    <fullName>I_RS_RES_RO</fullName>
    <active>true</active>
    <description>Corresponds to the &apos;RES-RO&apos; record type on Milestone Tasks (Activities)</description>
    <label>RES-RO</label>
</RecordType>