force-app/main/default/objects/Milestone__c/validationRules/Due_Date_Cannot_Be_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Cannot_Be_In_Past</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() || ISCHANGED(I_RS_Due_Date__c)) &amp;&amp;
!ISBLANK(I_RS_Due_Date__c) &amp;&amp;
I_RS_Due_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>I_RS_Due_Date__c</errorDisplayField>
    <errorMessage>Due Date for new Milestones cannot be in past</errorMessage>
</ValidationRule>