force-app/main/default/objects/Milestone__c/validationRules/Provide_Other_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Provide_Other_Description</fullName>
    <active>false</active>
    <description>If Milestone Type is Other, provide comments in Other Description</description>
    <errorConditionFormula>ISPICKVAL ( I_RS_Milestone_Type__c , &apos;Other&apos;) 
   &amp;&amp;
 I_RS_Other_Description__c == &apos;&apos;</errorConditionFormula>
    <errorDisplayField>I_RS_Other_Description__c</errorDisplayField>
    <errorMessage>Please provide your comments</errorMessage>
</ValidationRule>