force-app/main/default/objects/Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Milestone_Type__c</columns>
    <columns>I_RS_Due_Date__c</columns>
    <columns>I_RS_Status__c</columns>
    <columns>I_RS_Assignee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>