force-app/main/default/objects/Milestone__c/listViews/All_Milestones.listView-meta.xml
<ListView>
    <fullName>All_Milestones</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Research_Opportunity__c</columns>
    <columns>I_RS_Due_Date__c</columns>
    <columns>I_RS_Milestone_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Milestones</label>
</ListView>